HAI-1324 Fix alignment of filter tools and content in hanke list

--- a/src/domain/hanke/portfolio/HankePortfolio.module.scss
+++ b/src/domain/hanke/portfolio/HankePortfolio.module.scss
@@ -1,10 +1,16 @@
 @import 'layout.scss';
 
 .hankesalkkuContainer {
-  .contentContainer {
+  .maxWidthContainer {
     max-width: var(--breakpoint-xl);
     margin: auto;
-    padding: var(--spacing-l) var(--spacing-l) var(--spacing-3-xl) var(--spacing-l);
+    padding-left: var(--spacing-l);
+    padding-right: var(--spacing-l);
+  }
+
+  .contentContainer {
+    padding-top: var(--spacing-l);
+    padding-bottom: var(--spacing-3-xl);
     overflow-x: hidden;
 
     .notFoundContainer {
@@ -157,7 +163,7 @@
 
   .headerContainer {
     background-color: var(--color-summer-light);
-    padding: var(--spacing-s) var(--spacing-xl) 0 var(--spacing-3-xl);
+    padding-top: var(--spacing-s);
 
     .filters {
       display: grid;
